; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_cpcihp_zt5550.c_zt5550_hc_disable_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/hotplug/extr_cpcihp_zt5550.c_zt5550_hc_disable_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hc_dev = common dso_local global i32* null, align 8
@ENODEV = common dso_local global i32 0, align 4
@csr_int_mask = common dso_local global i32 0, align 4
@ENUM_INT_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @zt5550_hc_disable_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zt5550_hc_disable_irq() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32*, i32** @hc_dev, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* @ENODEV, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %1, align 4
  br label %17

8:                                                ; preds = %0
  %9 = load i32, i32* @csr_int_mask, align 4
  %10 = call i32 @readb(i32 %9)
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @ENUM_INT_MASK, align 4
  %13 = or i32 %11, %12
  store i32 %13, i32* %2, align 4
  %14 = load i32, i32* %2, align 4
  %15 = load i32, i32* @csr_int_mask, align 4
  %16 = call i32 @writeb(i32 %14, i32 %15)
  store i32 0, i32* %1, align 4
  br label %17

17:                                               ; preds = %8, %5
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i32 @readb(i32) #1

declare dso_local i32 @writeb(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
